update: add sidebar color

--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
-<!-- FILEPATH: /Users/ben/mine/code/template/index.html -->
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>My Website</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="sidebar">
+      <div class="header">
+        <img
+          src="https://via.placeholder.com/40"
+          class="header-logo"
+          alt="Placeholder Image"
+        />
+        <h1>My Menu</h1>
+      </div>
       <ul>
-        <li><span class="icon">&#x1F600;</span><a href="#">Home</a></li>
-        <li><span class="icon">&#x1F600;</span><a href="#">About</a></li>
-        <li><span class="icon">&#x1F600;</span><a href="#">Contact</a></li>
+        <li>
+          <a href="#home"><span class="icon">&#x1F600;</span>Home</a>
+        </li>
+        <li>
+          <a href="#about"> <span class="icon">&#x1F600;</span>About</a>
+        </li>
+        <li>
+          <a href="#contact"><span class="icon">&#x1F600;</span>Contact</a>
+        </li>
       </ul>
     </div>
     <div class="main-content">
