update: add sidebar hambergur menu

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="./app.js"></script>
   </head>
   <body>
     <div class="sidebar">
@@ -26,73 +27,124 @@
         <li>
           <a href="#contact"><span class="icon">&#x1F600;</span>Contact</a>
         </li>
+        <li>
+          <a href="#home"><span class="icon">&#x1F600;</span>Home</a>
+        </li>
+        <li>
+          <a href="#about"> <span class="icon">&#x1F600;</span>About</a>
+        </li>
+        <li>
+          <a href="#contact"><span class="icon">&#x1F600;</span>Contact</a>
+        </li>
+        <li>
+          <a href="#home"><span class="icon">&#x1F600;</span>Home</a>
+        </li>
+        <li>
+          <a href="#about"> <span class="icon">&#x1F600;</span>About</a>
+        </li>
+        <li>
+          <a href="#contact"><span class="icon">&#x1F600;</span>Contact</a>
+        </li>
+        <li>
+          <a href="#home"><span class="icon">&#x1F600;</span>Home</a>
+        </li>
+        <li>
+          <a href="#about"> <span class="icon">&#x1F600;</span>About</a>
+        </li>
+        <li>
+          <a href="#contact"><span class="icon">&#x1F600;</span>Contact</a>
+        </li>
+        <li>
+          <a href="#home"><span class="icon">&#x1F600;</span>Home</a>
+        </li>
+        <li>
+          <a href="#about"> <span class="icon">&#x1F600;</span>About</a>
+        </li>
+        <li>
+          <a href="#contact"><span class="icon">&#x1F600;</span>Contact</a>
+        </li>
+        <li>
+          <a href="#home"><span class="icon">&#x1F600;</span>Home</a>
+        </li>
+        <li>
+          <a href="#about"> <span class="icon">&#x1F600;</span>About</a>
+        </li>
+        <li>
+          <a href="#contact"><span class="icon">&#x1F600;</span>Contact</a>
+        </li>
       </ul>
     </div>
+    <div id="menu-bar" onclick="menuOnClick()">
+      <div id="bar1" class="bar"></div>
+      <div id="bar2" class="bar"></div>
+      <div id="bar3" class="bar"></div>
+    </div>
     <div class="main-content">
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
+      Hello
+        <h1>Welcome to my website!</h1>
+        <p>This is the main content of my website.</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+          veniam porro ex velit numquam tenetur soluta odio id error quas
+          ducimus delectus!
+        </p>
+        <h1>Welcome to my website!</h1>
+        <p>This is the main content of my website.</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+          veniam porro ex velit numquam tenetur soluta odio id error quas
+          ducimus delectus!
+        </p>
+        <h1>Welcome to my website!</h1>
+        <p>This is the main content of my website.</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+          veniam porro ex velit numquam tenetur soluta odio id error quas
+          ducimus delectus!
+        </p>
+        <h1>Welcome to my website!</h1>
+        <p>This is the main content of my website.</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+          veniam porro ex velit numquam tenetur soluta odio id error quas
+          ducimus delectus!
+        </p>
+        <h1>Welcome to my website!</h1>
+        <p>This is the main content of my website.</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+          veniam porro ex velit numquam tenetur soluta odio id error quas
+          ducimus delectus!
+        </p>
+        <h1>Welcome to my website!</h1>
+        <p>This is the main content of my website.</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+          veniam porro ex velit numquam tenetur soluta odio id error quas
+          ducimus delectus!
+        </p>
+        <h1>Welcome to my website!</h1>
+        <p>This is the main content of my website.</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+          veniam porro ex velit numquam tenetur soluta odio id error quas
+          ducimus delectus!
+        </p>
+        <h1>Welcome to my website!</h1>
+        <p>This is the main content of my website.</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+          veniam porro ex velit numquam tenetur soluta odio id error quas
+          ducimus delectus!
+        </p>
     </div>
   </body>
 </html>
