update: hambergur menu width

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./app.js"></script>
   </head>
   <body>
-    <div class="sidebar">
+    <div class="sidebar sidebar-collape">
       <div class="header">
         <img
           src="https://via.placeholder.com/40"
@@ -74,12 +74,12 @@
         </li>
       </ul>
     </div>
-    <div id="menu-bar" onclick="menuOnClick()">
+    <div class="menu-bar menu-bar-close" onclick="menuOnClick()">
       <div id="bar1" class="bar"></div>
       <div id="bar2" class="bar"></div>
       <div id="bar3" class="bar"></div>
     </div>
-    <div class="main-content">
+    <div class="main-content main-content-collape">
       Hello
         <h1>Welcome to my website!</h1>
         <p>This is the main content of my website.</p>
