update: hambergur menu style

--- a/index.html
+++ b/index.html
@@ -19,132 +19,121 @@
       </div>
       <ul>
         <li>
-          <a href="#home"><span class="icon">&#x1F600;</span>Home</a>
+          <a href="#home"><span class="icon">&#x1F600;</span>
+            <span class="menu-text">Home</span></a>
         </li>
         <li>
-          <a href="#about"> <span class="icon">&#x1F600;</span>About</a>
+          <a href="#about"> <span class="icon">&#x1F600;</span><span class="menu-text">About</span></a>
         </li>
         <li>
-          <a href="#contact"><span class="icon">&#x1F600;</span>Contact</a>
-        </li>
-        <li>
-          <a href="#home"><span class="icon">&#x1F600;</span>Home</a>
-        </li>
-        <li>
-          <a href="#about"> <span class="icon">&#x1F600;</span>About</a>
-        </li>
-        <li>
-          <a href="#contact"><span class="icon">&#x1F600;</span>Contact</a>
+          <a href="#contact"><span class="icon">&#x1F600;</span><span class="menu-text">Contact</span></a>
         </li>
         <li>
           <a href="#home"><span class="icon">&#x1F600;</span>Home</a>
         </li>
         <li>
-          <a href="#about"> <span class="icon">&#x1F600;</span>About</a>
+          <a href="#home"><span class="icon">&#x1F600;</span>
+            <span class="menu-text">Home</span></a>
         </li>
         <li>
-          <a href="#contact"><span class="icon">&#x1F600;</span>Contact</a>
+          <a href="#about"> <span class="icon">&#x1F600;</span><span class="menu-text">About</span></a>
         </li>
         <li>
-          <a href="#home"><span class="icon">&#x1F600;</span>Home</a>
+          <a href="#contact"><span class="icon">&#x1F600;</span><span class="menu-text">Contact</span></a>
         </li>
         <li>
-          <a href="#about"> <span class="icon">&#x1F600;</span>About</a>
+          <a href="#home"><span class="icon">&#x1F600;</span>
+            <span class="menu-text">Home</span></a>
         </li>
         <li>
-          <a href="#contact"><span class="icon">&#x1F600;</span>Contact</a>
+          <a href="#about"><span class="icon">&#x1F600;</span><span class="menu-text">About</span></a>
         </li>
         <li>
-          <a href="#home"><span class="icon">&#x1F600;</span>Home</a>
+          <a href="#contact"><span class="icon">&#x1F600;</span><span class="menu-text">Contact</span></a>
         </li>
         <li>
-          <a href="#about"> <span class="icon">&#x1F600;</span>About</a>
+          <a href="#home"><span class="icon">&#x1F600;</span>
+            <span class="menu-text">Home</span></a>
         </li>
         <li>
-          <a href="#contact"><span class="icon">&#x1F600;</span>Contact</a>
+          <a href="#about"> <span class="icon">&#x1F600;</span><span class="menu-text">About</span></a>
         </li>
         <li>
-          <a href="#home"><span class="icon">&#x1F600;</span>Home</a>
-        </li>
-        <li>
-          <a href="#about"> <span class="icon">&#x1F600;</span>About</a>
-        </li>
-        <li>
-          <a href="#contact"><span class="icon">&#x1F600;</span>Contact</a>
+          <a href="#contact"><span class="icon">&#x1F600;</span><span class="menu-text">Contact</span></a>
         </li>
       </ul>
     </div>
-    <div class="menu-bar menu-bar-close" onclick="menuOnClick()">
+    <div id="menu-bar" class="menu-bar menu-bar-close" onclick="menuOnClick()">
       <div id="bar1" class="bar"></div>
       <div id="bar2" class="bar"></div>
       <div id="bar3" class="bar"></div>
     </div>
     <div class="main-content main-content-collape">
       Hello
-        <h1>Welcome to my website!</h1>
-        <p>This is the main content of my website.</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-          veniam porro ex velit numquam tenetur soluta odio id error quas
-          ducimus delectus!
-        </p>
-        <h1>Welcome to my website!</h1>
-        <p>This is the main content of my website.</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-          veniam porro ex velit numquam tenetur soluta odio id error quas
-          ducimus delectus!
-        </p>
-        <h1>Welcome to my website!</h1>
-        <p>This is the main content of my website.</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-          veniam porro ex velit numquam tenetur soluta odio id error quas
-          ducimus delectus!
-        </p>
-        <h1>Welcome to my website!</h1>
-        <p>This is the main content of my website.</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-          veniam porro ex velit numquam tenetur soluta odio id error quas
-          ducimus delectus!
-        </p>
-        <h1>Welcome to my website!</h1>
-        <p>This is the main content of my website.</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-          veniam porro ex velit numquam tenetur soluta odio id error quas
-          ducimus delectus!
-        </p>
-        <h1>Welcome to my website!</h1>
-        <p>This is the main content of my website.</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-          veniam porro ex velit numquam tenetur soluta odio id error quas
-          ducimus delectus!
-        </p>
-        <h1>Welcome to my website!</h1>
-        <p>This is the main content of my website.</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-          veniam porro ex velit numquam tenetur soluta odio id error quas
-          ducimus delectus!
-        </p>
-        <h1>Welcome to my website!</h1>
-        <p>This is the main content of my website.</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-          asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-          veniam porro ex velit numquam tenetur soluta odio id error quas
-          ducimus delectus!
-        </p>
+      <h1>Welcome to my website!</h1>
+      <p>This is the main content of my website.</p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
+        delectus!
+      </p>
+      <h1>Welcome to my website!</h1>
+      <p>This is the main content of my website.</p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
+        delectus!
+      </p>
+      <h1>Welcome to my website!</h1>
+      <p>This is the main content of my website.</p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
+        delectus!
+      </p>
+      <h1>Welcome to my website!</h1>
+      <p>This is the main content of my website.</p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
+        delectus!
+      </p>
+      <h1>Welcome to my website!</h1>
+      <p>This is the main content of my website.</p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
+        delectus!
+      </p>
+      <h1>Welcome to my website!</h1>
+      <p>This is the main content of my website.</p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
+        delectus!
+      </p>
+      <h1>Welcome to my website!</h1>
+      <p>This is the main content of my website.</p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
+        delectus!
+      </p>
+      <h1>Welcome to my website!</h1>
+      <p>This is the main content of my website.</p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
+        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
+        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
+        delectus!
+      </p>
     </div>
   </body>
 </html>
