add: sidebar toggle

--- a/index.html
+++ b/index.html
@@ -8,67 +8,96 @@
     <script src="./app.js"></script>
   </head>
   <body>
-    <div class="sidebar sidebar-collape">
+    <div class="sidebar">
       <div class="header">
         <img
           src="https://via.placeholder.com/40"
           class="header-logo"
           alt="Placeholder Image"
         />
-        <h1>My Menu</h1>
+        <h1 class="header-title">My Menu</h1>
       </div>
       <ul>
         <li>
-          <a href="#home"><span class="icon">&#x1F600;</span>
-            <span class="menu-text">Home</span></a>
+          <a href="#home"
+            ><span class="icon">&#x1F600;</span>
+            <span class="menu-text">Home</span></a
+          >
         </li>
         <li>
-          <a href="#about"> <span class="icon">&#x1F600;</span><span class="menu-text">About</span></a>
+          <a href="#about">
+            <span class="icon">&#x1F600;</span
+            ><span class="menu-text">About</span></a
+          >
         </li>
         <li>
-          <a href="#contact"><span class="icon">&#x1F600;</span><span class="menu-text">Contact</span></a>
+          <a href="#contact"
+            ><span class="icon">&#x1F600;</span
+            ><span class="menu-text">Contact</span></a
+          >
         </li>
         <li>
-          <a href="#home"><span class="icon">&#x1F600;</span>Home</a>
+          <a href="#home"
+            ><span class="icon">&#x1F600;</span>
+            <span class="menu-text">Home</span></a
+          >
         </li>
         <li>
-          <a href="#home"><span class="icon">&#x1F600;</span>
-            <span class="menu-text">Home</span></a>
+          <a href="#about">
+            <span class="icon">&#x1F600;</span
+            ><span class="menu-text">About</span></a
+          >
         </li>
         <li>
-          <a href="#about"> <span class="icon">&#x1F600;</span><span class="menu-text">About</span></a>
+          <a href="#contact"
+            ><span class="icon">&#x1F600;</span
+            ><span class="menu-text">Contact</span></a
+          >
         </li>
         <li>
-          <a href="#contact"><span class="icon">&#x1F600;</span><span class="menu-text">Contact</span></a>
+          <a href="#home"
+            ><span class="icon">&#x1F600;</span>
+            <span class="menu-text">Home</span></a
+          >
         </li>
         <li>
-          <a href="#home"><span class="icon">&#x1F600;</span>
-            <span class="menu-text">Home</span></a>
+          <a href="#about"
+            ><span class="icon">&#x1F600;</span
+            ><span class="menu-text">About</span></a
+          >
         </li>
         <li>
-          <a href="#about"><span class="icon">&#x1F600;</span><span class="menu-text">About</span></a>
+          <a href="#contact"
+            ><span class="icon">&#x1F600;</span
+            ><span class="menu-text">Contact</span></a
+          >
         </li>
         <li>
-          <a href="#contact"><span class="icon">&#x1F600;</span><span class="menu-text">Contact</span></a>
+          <a href="#home"
+            ><span class="icon">&#x1F600;</span>
+            <span class="menu-text">Home</span></a
+          >
         </li>
         <li>
-          <a href="#home"><span class="icon">&#x1F600;</span>
-            <span class="menu-text">Home</span></a>
+          <a href="#about">
+            <span class="icon">&#x1F600;</span
+            ><span class="menu-text">About</span></a
+          >
         </li>
         <li>
-          <a href="#about"> <span class="icon">&#x1F600;</span><span class="menu-text">About</span></a>
-        </li>
-        <li>
-          <a href="#contact"><span class="icon">&#x1F600;</span><span class="menu-text">Contact</span></a>
+          <a href="#contact"
+            ><span class="icon">&#x1F600;</span
+            ><span class="menu-text">Contact</span></a
+          >
         </li>
       </ul>
     </div>
-    <div id="menu-bar" class="menu-bar menu-bar-close" onclick="menuOnClick()">
+    <div class="menu-bar" onclick="menuOnClick()">
       <div id="bar1" class="bar"></div>
       <div id="bar2" class="bar"></div>
       <div id="bar3" class="bar"></div>
     </div>
-    <div class="main-content main-content-collape">
+    <div class="main-content">
       Hello
       <h1>Welcome to my website!</h1>
       <p>This is the main content of my website.</p>
