update: class names

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./app.js"></script>
   </head>
   <body>
-    <div class="sidebar">
+    <div class="theme-sidebar">
       <div class="header">
         <img
           src="https://via.placeholder.com/40"
@@ -92,7 +92,7 @@
         </li>
       </ul>
     </div>
-    <div class="menu-bar" onclick="menuOnClick()">
+    <div class="theme-sidebar-toggler">
       <div id="bar1" class="bar"></div>
       <div id="bar2" class="bar"></div>
       <div id="bar3" class="bar"></div>
