update: class name

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
       </ul>
     </div>
     <div class="theme-sidebar-toggler">
-      <div id="bar1" class="bar"></div>
-      <div id="bar2" class="bar"></div>
-      <div id="bar3" class="bar"></div>
+      <div id="theme-bar1" class="theme-bar"></div>
+      <div id="theme-bar2" class="theme-bar"></div>
+      <div id="theme-bar3" class="theme-bar"></div>
     </div>
-    <div class="main-content">
+    <div class="theme-main-content">
       Hello
       <h1>Welcome to my website!</h1>
       <p>This is the main content of my website.</p>
