update: css class name

--- a/index.html
+++ b/index.html
@@ -9,85 +9,85 @@
   </head>
   <body>
     <div class="theme-sidebar">
-      <div class="header">
+      <div class="theme-header">
         <img
           src="https://via.placeholder.com/40"
-          class="header-logo"
+          class="theme-header-logo"
           alt="Placeholder Image"
         />
-        <h1 class="header-title">My Menu</h1>
+        <h1 class="theme-header-title">My Menu</h1>
       </div>
       <ul>
         <li>
           <a href="#home"
             ><span class="icon">&#x1F600;</span>
-            <span class="menu-text">Home</span></a
+            <span class="theme-menu-text">Home</span></a
           >
         </li>
         <li>
           <a href="#about">
             <span class="icon">&#x1F600;</span
-            ><span class="menu-text">About</span></a
+            ><span class="theme-menu-text">About</span></a
           >
         </li>
         <li>
           <a href="#contact"
             ><span class="icon">&#x1F600;</span
-            ><span class="menu-text">Contact</span></a
+            ><span class="theme-menu-text">Contact</span></a
           >
         </li>
         <li>
           <a href="#home"
             ><span class="icon">&#x1F600;</span>
-            <span class="menu-text">Home</span></a
+            <span class="theme-menu-text">Home</span></a
           >
         </li>
         <li>
           <a href="#about">
             <span class="icon">&#x1F600;</span
-            ><span class="menu-text">About</span></a
+            ><span class="theme-menu-text">About</span></a
           >
         </li>
         <li>
           <a href="#contact"
             ><span class="icon">&#x1F600;</span
-            ><span class="menu-text">Contact</span></a
+            ><span class="theme-menu-text">Contact</span></a
           >
         </li>
         <li>
           <a href="#home"
             ><span class="icon">&#x1F600;</span>
-            <span class="menu-text">Home</span></a
+            <span class="theme-menu-text">Home</span></a
           >
         </li>
         <li>
           <a href="#about"
             ><span class="icon">&#x1F600;</span
-            ><span class="menu-text">About</span></a
+            ><span class="theme-menu-text">About</span></a
           >
         </li>
         <li>
           <a href="#contact"
             ><span class="icon">&#x1F600;</span
-            ><span class="menu-text">Contact</span></a
+            ><span class="theme-menu-text">Contact</span></a
           >
         </li>
         <li>
           <a href="#home"
             ><span class="icon">&#x1F600;</span>
-            <span class="menu-text">Home</span></a
+            <span class="theme-menu-text">Home</span></a
           >
         </li>
         <li>
           <a href="#about">
             <span class="icon">&#x1F600;</span
-            ><span class="menu-text">About</span></a
+            ><span class="theme-menu-text">About</span></a
           >
         </li>
         <li>
           <a href="#contact"
             ><span class="icon">&#x1F600;</span
-            ><span class="menu-text">Contact</span></a
+            ><span class="theme-menu-text">Contact</span></a
           >
         </li>
       </ul>
