update: css class name

--- a/index.html
+++ b/index.html
@@ -20,73 +20,73 @@
       <ul>
         <li>
           <a href="#home"
-            ><span class="icon">&#x1F600;</span>
+            ><span class="theme-icon">&#x1F600;</span>
             <span class="theme-menu-text">Home</span></a
           >
         </li>
         <li>
           <a href="#about">
-            <span class="icon">&#x1F600;</span
+            <span class="theme-icon">&#x1F600;</span
             ><span class="theme-menu-text">About</span></a
           >
         </li>
         <li>
           <a href="#contact"
-            ><span class="icon">&#x1F600;</span
+            ><span class="theme-icon">&#x1F600;</span
             ><span class="theme-menu-text">Contact</span></a
           >
         </li>
         <li>
           <a href="#home"
-            ><span class="icon">&#x1F600;</span>
+            ><span class="theme-icon">&#x1F600;</span>
             <span class="theme-menu-text">Home</span></a
           >
         </li>
         <li>
           <a href="#about">
-            <span class="icon">&#x1F600;</span
+            <span class="theme-icon">&#x1F600;</span
             ><span class="theme-menu-text">About</span></a
           >
         </li>
         <li>
           <a href="#contact"
-            ><span class="icon">&#x1F600;</span
+            ><span class="theme-icon">&#x1F600;</span
             ><span class="theme-menu-text">Contact</span></a
           >
         </li>
         <li>
           <a href="#home"
-            ><span class="icon">&#x1F600;</span>
+            ><span class="theme-icon">&#x1F600;</span>
             <span class="theme-menu-text">Home</span></a
           >
         </li>
         <li>
           <a href="#about"
-            ><span class="icon">&#x1F600;</span
+            ><span class="theme-icon">&#x1F600;</span
             ><span class="theme-menu-text">About</span></a
           >
         </li>
         <li>
           <a href="#contact"
-            ><span class="icon">&#x1F600;</span
+            ><span class="theme-icon">&#x1F600;</span
             ><span class="theme-menu-text">Contact</span></a
           >
         </li>
         <li>
           <a href="#home"
-            ><span class="icon">&#x1F600;</span>
+            ><span class="theme-icon">&#x1F600;</span>
             <span class="theme-menu-text">Home</span></a
           >
         </li>
         <li>
           <a href="#about">
-            <span class="icon">&#x1F600;</span
+            <span class="theme-icon">&#x1F600;</span
             ><span class="theme-menu-text">About</span></a
           >
         </li>
         <li>
           <a href="#contact"
-            ><span class="icon">&#x1F600;</span
+            ><span class="theme-icon">&#x1F600;</span
             ><span class="theme-menu-text">Contact</span></a
           >
         </li>
