--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Template</title>
-    <link rel="stylesheet" href="./style.css" />
-    <script src="./app.js"></script>
+    <link rel="stylesheet" href="./theme-style.css" />
+    <script src="./theme-app.js"></script>
   </head>
   <body>
     <div class="theme-sidebar">
