html: update index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./theme-app.js"></script>
   </head>
   <body>
-    <div class="theme-sidebar">
+    <nav class="theme-sidebar">
       <div class="theme-header">
         <img
           src="https://via.placeholder.com/40"
@@ -16,6 +16,11 @@
           alt="Placeholder Image"
         />
         <h1 class="theme-header-title">My Menu</h1>
+        <div class="theme-sidebar-toggler">
+          <div class="theme-hamburger-menu" id="theme-hamburger-menu1"></div>
+          <div class="theme-hamburger-menu" id="theme-hamburger-menu2"></div>
+          <div class="theme-hamburger-menu" id="theme-hamburger-menu3"></div>
+        </div>
       </div>
       <ul>
         <li>
@@ -31,138 +36,13 @@
           >
         </li>
         <li>
-          <a href="#contact"
-            ><span class="theme-icon">&#x1F600;</span
-            ><span class="theme-menu-text">Contact</span></a
-          >
-        </li>
-        <li>
-          <a href="#home"
-            ><span class="theme-icon">&#x1F600;</span>
-            <span class="theme-menu-text">Home</span></a
-          >
-        </li>
-        <li>
           <a href="#about">
             <span class="theme-icon">&#x1F600;</span
-            ><span class="theme-menu-text">About</span></a
-          >
-        </li>
-        <li>
-          <a href="#contact"
-            ><span class="theme-icon">&#x1F600;</span
-            ><span class="theme-menu-text">Contact</span></a
-          >
-        </li>
-        <li>
-          <a href="#home"
-            ><span class="theme-icon">&#x1F600;</span>
-            <span class="theme-menu-text">Home</span></a
-          >
-        </li>
-        <li>
-          <a href="#about"
-            ><span class="theme-icon">&#x1F600;</span
-            ><span class="theme-menu-text">About</span></a
-          >
-        </li>
-        <li>
-          <a href="#contact"
-            ><span class="theme-icon">&#x1F600;</span
-            ><span class="theme-menu-text">Contact</span></a
-          >
-        </li>
-        <li>
-          <a href="#home"
-            ><span class="theme-icon">&#x1F600;</span>
-            <span class="theme-menu-text">Home</span></a
-          >
-        </li>
-        <li>
-          <a href="#about">
-            <span class="theme-icon">&#x1F600;</span
-            ><span class="theme-menu-text">About</span></a
-          >
-        </li>
-        <li>
-          <a href="#contact"
-            ><span class="theme-icon">&#x1F600;</span
             ><span class="theme-menu-text">Contact</span></a
           >
         </li>
       </ul>
-    </div>
-    <div class="theme-sidebar-toggler">
-      <div id="theme-bar1" class="theme-bar"></div>
-      <div id="theme-bar2" class="theme-bar"></div>
-      <div id="theme-bar3" class="theme-bar"></div>
-    </div>
-    <div class="theme-main-content">
-      Hello
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-      <h1>Welcome to my website!</h1>
-      <p>This is the main content of my website.</p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et sapiente
-        asperiores quisquam, ea necessitatibus, nesciunt dolores consequatur
-        veniam porro ex velit numquam tenetur soluta odio id error quas ducimus
-        delectus!
-      </p>
-    </div>
+    </nav>
+    <main class="theme-main-content">Your Main Content Goes Here</main>
   </body>
 </html>
